--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -329,15 +329,15 @@ function togglePopup3(){
       </li>
 
     </ul>
-  </nav>
-  <main >
+  </nav> 
+  <main style="width: 100%;">
 <div class="container" style="width: 100%;margin-left: 0px;" onclick="closeAllSubMenus()">
 <section id ="placeform">
   <div style="width: 100%;" class="form-container" >
     <script type="text/javascript">var submitted=false </script>
     <iframe name="hiddenConfirm" id="hiddenConfirm" style="display: none;" onload="if(submitted){
         window.location='submifssion.html'; }"></iframe>
-        <form style="width: 100%;" id="form" class="container m-4 pl-4" method="POST" onchange="gethtmldata()">
+        <form style="width: 100%;margin-left: 0px;" id="form" class="container m-4 pl-4" method="POST" onchange="gethtmldata()">
     <h1 style="text-align: center;"> Update Form </h1><br>
     <div id="formdetails">
     <div class="form-element">
@@ -405,7 +405,7 @@ function togglePopup3(){
     <div class="form-element" style="width: 47%;margin-bottom: 0px;">
       <div style="display: flex;flex-direction: column;min-height: 55px; height:calc(100% - 50px) ;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
-      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
+      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Question Description</span>
     </div>
       <div  class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none; width: 50px;">
@@ -591,7 +591,7 @@ var newitem =
     <div class="form-element" style="width: 47%;margin-bottom: 0px;">
       <div style="display: flex;flex-direction: column;min-height: 55px; height:calc(100% - 50px) ;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
-      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
+      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Question Description</span>
     </div>
       <div  class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none; width: 50px;">
