--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -328,7 +328,7 @@ function togglePopup3(){
 
     </ul>
   </nav>
-  <main >
+  <main style="width: 100%;">
 <div class="container" style="width: 100%;margin-left: 0px;" onclick="closeAllSubMenus()">
 <section id ="placeform">
   <div style="width: 100%;" class="form-container" >
@@ -403,7 +403,7 @@ function togglePopup3(){
     <div class="form-element" style="width: 47%;margin-bottom: 0px;">
       <div style="display: flex;flex-direction: column;min-height: 55px; height:calc(100% - 50px) ;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
-      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
+      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Question Description</span>
     </div>
       <div  class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none; width: 50px;">
@@ -589,7 +589,7 @@ var newitem =
     <div class="form-element" style="width: 47%;margin-bottom: 0px;">
       <div style="display: flex;flex-direction: column;min-height: 55px; height:calc(100% - 50px) ;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
-      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
+      <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Question Description</span>
     </div>
       <div  class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none; width: 50px;">
