--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -1583,7 +1583,7 @@ var optionsadd ="";
   var optionname = optionsq[i].value;
 
    var optiontemp =`
-<option value=`+optionname+`'>`+optionname+`</option>
+<option value='`+optionname+`'>`+optionname+`</option>
 `;
 optionsadd += optiontemp;
 }
