--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -1011,13 +1011,21 @@ else if(data=="Not Found"){
           document.getElementById("load").style.display="initial";
            document.getElementById("loader").style.display="block"; 
            document.getElementById("message").textContent = "Changing Status....";
-           console.log(formname+"/Forms"+"/"+status)
+           
+           var formstringgg= formname+"/"+status+"/"+time;
+           console.log(formstringgg)
+           if(status=="Live"){
+            togglePopup7()
+           }
+           else{
+            togglePopup6()
+           }
             fetch(
           "https://script.google.com/macros/s/AKfycbzU6sY0E5g9AolZDs3jd6YbiJKICTnrL0Z4DkGoA00eWt0zVDP52ZFcWsMheamZ4LgZ0g/exec",
           {
             redirect: "follow",
             method: "POST",
-            body: formname+"/Forms"+"/"+status,
+            body: formstringgg,
             headers: {
               "Content-Type": "text/plain;charset=utf-8",
             },
