--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -1012,7 +1012,7 @@ else if(data=="Not Found"){
            document.getElementById("loader").style.display="block"; 
            document.getElementById("message").textContent = "Changing Status....";
            
-           var formstringgg= formname+"/"+status+"/"+time;
+           var formstringgg= formname+"/"+status;
            console.log(formstringgg)
            if(status=="Live"){
             togglePopup7()
