--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -2109,8 +2109,8 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
   }
 </script>
 <script>
-    function updatelogstatus(){
-      var updatestring = localStorage.getItem("loggedname");
+    function updatelogstatus(status){
+      var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
        fetch(
@@ -2150,22 +2150,28 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
 
    });
    }
+   setInterval(() => {
 
-setInterval(() => {
-  console.log("log")
-updatelogstatus();
-}, 500)
+fetchd ();
+}, 1000)
 
-    
-/*setInterval(() => {
-  if (crestatus !=="Creating"){
- var html = gethtmldata();
- var jhtml = JSON.stringify(html)
-sessionStorage.setItem("editbackuphtml",jhtml);
-  }
-}, 5000)*/
+setTimeout(() => {
 
-    </script>
+updatelogstatus("Online");
+
+}, 2000)
+window.addEventListener("blur", () => {
+  updatelogstatus("Offline");   
+  });
+  window.addEventListener("focus", () => {
+  updatelogstatus("Online");   
+  });
+//window.unblur = colse();
+const beforeUnloadHandler = (event) => {  
+  updatelogstatus("Offline");  
+};
+window.addEventListener("beforeunload", beforeUnloadHandler);
+   </script>
     <script>
     const keyvaluess = window.location.search;
      const values = new URLSearchParams(keyvaluess);
