--- a/f&r/index.html
+++ b/f&r/index.html
@@ -815,8 +815,8 @@ console.log(details)
 
    </script>
    <script>
-    function updatelogstatus(){
-      var updatestring = localStorage.getItem("loggedname");
+    function updatelogstatus(status){
+      var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
        fetch(
@@ -862,11 +862,21 @@ fetchd ();
 }, 1000)
 
 setTimeout(() => {
-  setInterval(() => {
-updatelogstatus();
-}, 1000)
-}, 2000)
 
+updatelogstatus("Online");
+
+}, 2000)
+window.addEventListener("blur", () => {
+  updatelogstatus("Offline");   
+  });
+  window.addEventListener("focus", () => {
+  updatelogstatus("Online");   
+  });
+//window.unblur = colse();
+const beforeUnloadHandler = (event) => {  
+  updatelogstatus("Offline");  
+};
+window.addEventListener("beforeunload", beforeUnloadHandler);
    </script>
 
 </html>
