--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -2152,8 +2152,8 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
   }
 </script>
 <script>
-    function updatelogstatus(){
-      var updatestring = localStorage.getItem("loggedname");
+    function updatelogstatus(status){
+      var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
        fetch(
@@ -2193,21 +2193,28 @@ lastoption[lastoption.length-3].children[0].children[0].value=value
 
    });
    }
+   setInterval(() => {
 
-setInterval(() => {
-  console.log("log")
-updatelogstatus();
-}, 500)
+fetchd ();
+}, 1000)
 
- 
-/*setInterval(() => {
-  if (crestatus !=="Creating"){
- var html = gethtmldata();
- var jhtml = JSON.stringify(html)
-sessionStorage.setItem("backuphtml",jhtml);
-  }
-}, 5000)*/
-    </script>
+setTimeout(() => {
+
+updatelogstatus("Online");
+
+}, 2000)
+window.addEventListener("blur", () => {
+  updatelogstatus("Offline");   
+  });
+  window.addEventListener("focus", () => {
+  updatelogstatus("Online");   
+  });
+//window.unblur = colse();
+const beforeUnloadHandler = (event) => {  
+  updatelogstatus("Offline");  
+};
+window.addEventListener("beforeunload", beforeUnloadHandler);
+   </script>
 <script src="scriptplaceform.js  "></script>
 <script src="scriptform.js"></script>
 <script src="drag.js"></script>
