--- a/f&r/new-placement-form.html
+++ b/f&r/new-placement-form.html
@@ -1031,8 +1031,8 @@ console.log(formDataString+"=sheetid="+loggedname+"=sheetid="+formname)
 
 </script>
 <script>
-    function updatelogstatus(){
-      var updatestring = localStorage.getItem("loggedname");
+    function updatelogstatus(status){
+      var updatestring = localStorage.getItem("loggedname")+"/"+status;
  
            
        fetch(
@@ -1072,10 +1072,27 @@ console.log(formDataString+"=sheetid="+loggedname+"=sheetid="+formname)
 
    });
    }
+   setInterval(() => {
 
-setInterval(() => {
-updatelogstatus();
-}, 500)
+fetchd ();
+}, 1000)
+
+setTimeout(() => {
+
+updatelogstatus("Online");
+
+}, 2000)
+window.addEventListener("blur", () => {
+  updatelogstatus("Offline");   
+  });
+  window.addEventListener("focus", () => {
+  updatelogstatus("Online");   
+  });
+//window.unblur = colse();
+const beforeUnloadHandler = (event) => {  
+  updatelogstatus("Offline");  
+};
+window.addEventListener("beforeunload", beforeUnloadHandler);
    </script>
 <script src="scriptplaceform.js  "></script>
 <script src="scriptform.js"></script>
