--- a/f&r/past.html
+++ b/f&r/past.html
@@ -796,8 +796,8 @@ if (tdata.includes(sdata)){
    }
    </script>
     <script>
-      function updatelogstatus(){
-        var updatestring = localStorage.getItem("loggedname");
+      function updatelogstatus(status){
+        var updatestring = localStorage.getItem("loggedname")+"/"+status;
    
              
          fetch(
@@ -837,17 +837,27 @@ if (tdata.includes(sdata)){
   
      });
      }
-  
      setInterval(() => {
-
-fetchd ();
-}, 1000)
-
-setTimeout(() => {
-  setInterval(() => {
-updatelogstatus();
-}, 1000)
-}, 2000)
+  
+  fetchd ();
+  }, 1000)
+  
+  setTimeout(() => {
+  
+  updatelogstatus("Online");
+  
+  }, 2000)
+  window.addEventListener("blur", () => {
+    updatelogstatus("Offline");   
+    });
+    window.addEventListener("focus", () => {
+    updatelogstatus("Online");   
+    });
+  //window.unblur = colse();
+  const beforeUnloadHandler = (event) => {  
+    updatelogstatus("Offline");  
+  };
+  window.addEventListener("beforeunload", beforeUnloadHandler);
      </script>
 
 </html>
