--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -1225,8 +1225,8 @@ setInterval(() => {
 
    </script>
     <script>
-      function updatelogstatus(){
-        var updatestring = localStorage.getItem("loggedname");
+      function updatelogstatus(status){
+        var updatestring = localStorage.getItem("loggedname")+"/"+status;
    
              
          fetch(
@@ -1266,9 +1266,26 @@ setInterval(() => {
   
      });
      }
+     setInterval(() => {
   
-  setInterval(() => {
-  updatelogstatus();
-  }, 500)
+  fetchd ();
+  }, 1000)
+  
+  setTimeout(() => {
+  
+  updatelogstatus("Online");
+  
+  }, 2000)
+  window.addEventListener("blur", () => {
+    updatelogstatus("Offline");   
+    });
+    window.addEventListener("focus", () => {
+    updatelogstatus("Online");   
+    });
+  //window.unblur = colse();
+  const beforeUnloadHandler = (event) => {  
+    updatelogstatus("Offline");  
+  };
+  window.addEventListener("beforeunload", beforeUnloadHandler);
      </script>
 </html>
