--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -966,9 +966,27 @@ formlink= "https://niftemt-placementcell-forms.pages.dev/form/?form="+folderid
           }
         )
 
-          .then(function (response) {
+          .then(async function (response) {
 
             // Check if the request was successful
+            const result1 = await response.json();
+            console.log(result1.data2);
+            var data = result1.data2;
+if(data=="Success"){
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form Deleted Successful";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+}
+else if(data=="Not Found"){
+  
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form not found";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+} 
             if (response) {
          
               return response; // Assuming your script returns JSON response
@@ -976,7 +994,7 @@ formlink= "https://niftemt-placementcell-forms.pages.dev/form/?form="+folderid
               throw new Error("Failed to load the form.");
             }
           })
-          .then(async function (data) {
+       /*   .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
             var data = result1.data2;
@@ -995,7 +1013,7 @@ else if(data=="Not Found"){
     ustatus="";
     },2000);
 } 
-})
+})*/
 
           .catch(function (error) {
             // Handle errors, you can display an error message here
@@ -1117,9 +1135,31 @@ else if(data=="Not Found"){
           }
         )
 
-          .then(function (response) {
+          .then(async function (response) {
 
             // Check if the request was successful
+            const result1 = await response.json();
+            console.log(result1.data2);
+            var data = result1.data2;
+if(data=="Success"){
+  document.getElementById("loader").style.display="none"; 
+  const d =   document.querySelectorAll('input[type=datetime-local]');
+  d[0].value = 0
+  d[1].value = 0
+    document.getElementById("message").textContent="Status Change Time Set Successful";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    uncheckoptions();
+    },2000);
+}
+else if(data=="Not Found"){
+  
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form not found";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+} 
             if (response) {
          
               return response; // Assuming your script returns JSON response
@@ -1127,7 +1167,7 @@ else if(data=="Not Found"){
               throw new Error("Failed to load the form.");
             }
           })
-          .then(async function (data) {
+     /*     .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
             var data = result1.data2;
@@ -1150,7 +1190,7 @@ else if(data=="Not Found"){
     ustatus="";
     },2000);
 } 
-})
+})*/
 
           .catch(function (error) {
             // Handle errors, you can display an error message here
