--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -953,9 +953,27 @@ alert("PassKey is already created for this Device")
           }
         )
 
-          .then(function (response) {
+          .then(async function (response) {
 
             // Check if the request was successful
+            const result1 = await response.json();
+            console.log(result1.data2);
+            var data = result1.data2;
+if(data=="Success"){
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form Deleted Successful";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+}
+else if(data=="Not Found"){
+  
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form not found";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+} 
             if (response) {
          
               return response; // Assuming your script returns JSON response
@@ -963,7 +981,7 @@ alert("PassKey is already created for this Device")
               throw new Error("Failed to load the form.");
             }
           })
-          .then(async function (data) {
+         /* .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
             var data = result1.data2;
@@ -982,7 +1000,7 @@ else if(data=="Not Found"){
     ustatus="";
     },2000);
 } 
-})
+})*/
 
           .catch(function (error) {
             // Handle errors, you can display an error message here
@@ -1099,9 +1117,30 @@ else if(data=="Not Found"){
           }
         )
 
-          .then(function (response) {
+          .then(async function (response) {
 
             // Check if the request was successful
+            const result1 = await response.json();
+            console.log(result1.data2);
+            var data = result1.data2;
+if(data=="Success"){
+  document.getElementById("loader").style.display="none"; 
+  const d =   document.querySelectorAll('input[type=datetime-local]');
+  d[0].value = 0
+  d[1].value = 0
+    document.getElementById("message").textContent="Status Change Time Set Successful";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+}
+else if(data=="Not Found"){
+  
+  document.getElementById("loader").style.display="none"; 
+    document.getElementById("message").textContent="Form not found";
+    setTimeout(function () { document.getElementById("load").style.display="none"; 
+    ustatus="";
+    },2000);
+} 
             if (response) {
          
               return response; // Assuming your script returns JSON response
@@ -1109,7 +1148,7 @@ else if(data=="Not Found"){
               throw new Error("Failed to load the form.");
             }
           })
-          .then(async function (data) {
+    /*      .then(async function (data) {
             const result1 = await data.json();
             console.log(result1.data2);
             var data = result1.data2;
@@ -1131,7 +1170,7 @@ else if(data=="Not Found"){
     ustatus="";
     },2000);
 } 
-})
+})*/
 
           .catch(function (error) {
             // Handle errors, you can display an error message here
