--- a/preview-form/index.html
+++ b/preview-form/index.html
@@ -37,6 +37,9 @@ console.log(idvalue)
        .then(({ data }) => {
         console.log(data)
         var loggedname =localStorage.getItem("loggedname")
+        if (data == "Not Found"){
+          alert("Form not found")
+        }
    if(formstatus=="Form Fetched"){
     if(loggedname==owner){
            if (data == "Created"){
@@ -65,6 +68,7 @@ console.log(idvalue)
 else{
  document.getElementById("ll").textContent="This form is created by "+owner;
 }
+
 }
        })
        .catch((error) => console.error('!!!!!!!!', error));
