--- a/preview-form/index.html
+++ b/preview-form/index.html
@@ -36,6 +36,9 @@ console.log(idvalue)
        .then((response) => response.json())
        .then(({ data }) => {
         console.log(data)
+        if (data == "Not Found"){
+          alert("Form not found")
+        }
         var loggedname =localStorage.getItem("loggedname")
         if (data == "Not Found"){
           alert("Form not found")
