--- a/f&r/index.html
+++ b/f&r/index.html
@@ -57,6 +57,7 @@ font-weight: bold;
 </style>
 <script>
   function logout(){
+    updatelogstatus("Offline");  
     localStorage.removeItem("loggedname")
     window.location="../logout.html";
   }
