--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -56,6 +56,7 @@ font-weight: bold;
 </style>
 <script>
   function logout(){
+    updatelogstatus("Offline");  
     localStorage.removeItem("loggedname")
     window.location="../logout.html";
   }
